--- a/assignment/module4.ipynb
+++ b/assignment/module4.ipynb
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -541,6 +541,74 @@
     "width=int(input(\"enter width of rectangle:\"))\n",
     "newRectangle = Rectangle(length, width)\n",
     "print(newRectangle.rectangle_area())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200.96\n",
+      "50.24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python class named Circle constructed by a radius and two methods which will compute the area and the perimeter of a circle\n",
+    "class Circle():\n",
+    "    def __init__(self, r):\n",
+    "        self.radius = r\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.radius**2*3.14\n",
+    "    \n",
+    "    def perimeter(self):\n",
+    "        return 2*self.radius*3.14\n",
+    "radius=int(input(\"Enter radius of circle\"))\n",
+    "NewCircle = Circle(radius)\n",
+    "print(NewCircle.area())\n",
+    "print(NewCircle.perimeter())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A class display\n",
+      "B class display\n",
+      "C class display\n"
+     ]
+    }
+   ],
+   "source": [
+    "   #  Explain Inheritance in Python with an example? What is init? Or What Is A Constructor In Python?\n",
+    "\n",
+    "   #Inheritance is defined as the mechanism of inheriting the properties of the base class to the child class.\n",
+    "\n",
+    "\n",
+    "class A:\n",
+    "    def displayA(self):\n",
+    "        print(\"A class display\")\n",
+    "class B(A):\n",
+    "    def displayB(self):\n",
+    "        print(\"B class display\")\n",
+    "class C(A):\n",
+    "    def displayC(self):\n",
+    "        print(\"C class display\")\n",
+    "obj =B()\n",
+    "obj.displayA()\n",
+    "obj.displayB()\n",
+    "obj=C()\n",
+    "obj.displayC()"
    ]
   },
   {
